# ros2_burger1

./: README.md
src/burger1_description/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/burger1_description/config/: my_controllers.yaml
src/burger1_description/launch/: gazebo_launch.py  launch_robot.launch.py  launch_sim.launch.py
src/burger1_description/resource/: base_link.xacro  burger1.urdf.xacro  inertial_macros.xacro  ros2_control.xacro
src/burger1_description/rviz2_models/: view_burger1_chasis_ruedas.rviz  view_burger1_odom_full.rviz
src/burger1_description/world_gazebo/: obstacles.world
src/burger1_motors/: package.xml  setup.cfg  setup.py
src/burger1_motors/burger1_motors/: control_motor.py
src/burger1_robot/: CMakeLists.txt  burger1_robot.xml  package.xml  setup.cfg  setup.py
src/burger1_robot/include/burger1_robot/: burger1_robot_system.hpp  visibility_control.h
src/burger1_robot/src/: burger1_robot_system.cpp
src/environment/: desktop.sh  raspberry.sh
src/robot_control_manager/: package.xml  setup.cfg  setup.py
src/robot_control_manager/robot_control_manager/: robot_control_manager.py
